Fixed scrollbars always showing up on some browsers.

--- a/style.css
+++ b/style.css
@@ -82,6 +82,12 @@ a:hover {
     width: 100%;
     max-height: 272px;
     overflow-y: scroll;
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+    scrollbar-width: none; /* Firefox, Safari 18.2+, Chromium 121+ */
+}
+
+.inner-content::-webkit-scrollbar {
+    display: none; /* Older Safari and Chromium */
 }
 
 .inner-container {
